# imu_positioning

./: CMakeLists.txt  copy_bbb_brlnet.sh  copy_bmt.sh  copy_localvm.sh  package.xml
include/imu_positioning/: calibration.hpp  sensor_integration.hpp  trapezoid_integration.hpp  xsens_MTi30.hpp
launch/: imu_positioning.launch
msg/: xsens_MTi.msg
src/: calibration.cpp  sensor_integration.cpp  trapezoid_integration.cpp  xsens_MTi30.cpp
